[package]
name = "clantool"
version = "0.2.1"
authors = ["Aron Heinecke"]

#[profile.release]
#lto = true

[[bin]]
name = "clantool"

[dependencies]
lazy_static = ">= 1.0.0"
toml = ">= 0.4.5"
serde = ">= 1.0.29"
serde_derive = ">= 1.0.29"
log = ">= 0.4.1"
log4rs = ">= 0.8.0"
chrono = ">= 0.4.0"
reqwest = ">= 0.8.5"
json = ">= 0.11.13"
flate2 = ">= 1.0.1"
quick-error = ">= 1.2.1"
clap = ">= 2.31.1"
sendmail = { git = "https://github.com/0xpr03/rust-sendmail", rev = "f0463869b55b3309d9c82e1b0c86ddad58eb98ef" }
regex = ">= 0.2.8"
mysql = ">= 12.0.2"
timer = ">= 0.2"
