[package]
name = "clantool"
version = "0.6.2"
authors = ["Aron Heinecke"]
edition = "2018"

#[profile.release]
#lto = true

[[bin]]
name = "clantool"

[dependencies]
lazy_static = "1"
toml = "0.7"
serde = { version = "1", features = ["derive","rc"] }
log = "0.4"
log4rs = "1.3.0"
chrono = "0.4"
json = "0.12"
quick-error = "2"
clap = "2"
regex = "1"
mysql = "20"
timer = "0.2"
csv = "1"
signal-hook = "0.3"
lettre = "0.9"
lettre_email = "0.9"

[dependencies.ts3-query]
features = ["backtrace"]
version ="0.3"

[dev-dependencies]
rand = "0.8"
